# beijing_fushengji_rewrite

./: .gitignore  Introduction to Beijing Floating Life.html  README.md  build_help.py  compile_all.py  debian_deps.sh  doc.html  enable-pyside-fcitx.sh  entry.py  entry.py.spec  m-r.txt  main.qrc  pyproject.toml  story.ui  translation_zh_CN.ts
.idx/: dev.nix
app/: Story.py  cybercafe.py  events.py  main.py  models.py  story.py  tools.py
beijing_fushengji/: __main__.py  help.html  help_en_html.py  help_html.py  score.txt
beijing_fushengji/app/: events.py  main.py  tools.py
beijing_fushengji/console/: mainwindow.py
beijing_fushengji/ui/: about.py  airport.py  bank.py  beijing_intro.py  buy.py  celebrate.py  diary.py  easteregg.py  hospital.py  main.py  main2.py  main_widget.py  mainwindow.py  money_exchange.py  net_cafe.py  news.py  pay_debt.py  rent.py  sell.py  send_money.py  settings.py  statements.py  story.py  text_editor.py  top_players.py
beijing_fushengji/widgets/: about.py  bank.py  buy.py  debug_window.py  hospital.py  main_widget.py  mainwindow.py  pay_debt.py  simple_dialogs.py  story.py  tables.py  top_players.py
console/: mainwindow.py
form/: about.ui  airport.ui  bank.ui  beijing_intro.ui  buy.ui  celebrate.ui  diary.ui  easteregg.ui  hospital.ui  main.ui  main_widget.ui  mainwindow.ui  money_exchange.ui  net_cafe.ui  news.ui  pay_debt.ui  rent.ui  sell.ui  send_money.ui  settings.ui  statements.ui  story.ui  text_editor.ui  top_players.ui
migrations/: remove_qss.py  replace_import.py
tests/: random_analysis.py  test_compile_all.py  test_sound.py  test_table_selection.py  test_tableview.py  test_textbrowser_font.py
tests/c_random_analysis/: test.c
tests/test_reload/: app.py  co2.py  component.py
tools/: compile_all.py  design.py  help.html  help_en.html  package.py  translate.py
widgets/: __init__.py  about.py  airport.py  bank.py  beijing_intro.py  buy.py  celebrate.py  cybercafe.py  debug_window.py  diary.py  easteregg.py  hospital.py  main_widget.py  mainwindow.py  my_table_model.py  news.py  pay_debt.py  rent.py  sell.py  send_money.py  settings.py  simple_dialogs.py  statements.py  story.py  styled_widget.py  tables.py  text_editor.py  top_players.py
